--- a/03-CUDA/matrixMul/Makefile
+++ b/03-CUDA/matrixMul/Makefile
@@ -269,7 +269,7 @@ LIBRARIES :=
 ################################################################################
 
 # Gencode arguments
-SMS ?= 35 37 50 52 60 61 70 75 80
+SMS ?= 35 37 50 52 60 61 70 75
 
 ifeq ($(SMS),)
 $(info >>> WARNING - no SM architectures have been specified - waiving sample <<<)
