--- a/02-FRAMEWORKS/environment.yml
+++ b/02-FRAMEWORKS/environment.yml
@@ -9,10 +9,18 @@ dependencies:
   - absl-py=1.0.0
   - aiohttp=3.8.1
   - aiosignal=1.2.0
+  - alsa-lib=1.2.3
+  - asttokens=2.0.5
   - astunparse=1.6.3
   - async-timeout=4.0.2
   - attrs=21.4.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - black=22.1.0
   - blinker=1.4
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.18.1
@@ -27,64 +35,149 @@ dependencies:
   - cryptography=36.0.1
   - cudatoolkit=10.2.89
   - cudnn=7.6.5.32
+  - cycler=0.11.0
+  - dataclasses=0.8
+  - dbus=1.13.6
+  - debugpy=1.5.1
+  - decorator=5.1.1
+  - entrypoints=0.4
+  - executing=0.8.2
+  - expat=2.4.6
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.96
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.29.1
+  - freetype=2.10.4
   - frozenlist=1.3.0
   - gast=0.4.0
+  - gettext=0.19.8.1
   - giflib=5.2.1
   - google-auth=1.35.0
   - google-auth-oauthlib=0.4.6
   - google-pasta=0.2.0
   - grpc-cpp=1.42.0
   - grpcio=1.42.0
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
   - h5py=3.6.0
   - hdf5=1.12.1
   - icu=69.1
   - idna=3.3
   - importlib-metadata=4.11.1
+  - ipykernel=6.9.1
+  - ipython=8.0.1
+  - jbig=2.1
+  - jedi=0.18.1
   - jpeg=9e
+  - jupyter_client=7.1.2
+  - jupyter_core=4.9.2
   - keras=2.7.0
   - keras-preprocessing=1.1.2
+  - kiwisolver=1.3.2
   - krb5=1.19.2
+  - lcms2=2.12
   - ld_impl_linux-64=2.36.1
+  - lerc=3.0
   - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
   - libcblas=3.9.0
+  - libclang=13.0.1
   - libcurl=7.81.0
+  - libdeflate=1.10
   - libedit=3.1.20191231
   - libev=4.33
+  - libevent=2.1.10
   - libffi=3.4.2
   - libgcc-ng=11.2.0
   - libgfortran-ng=11.2.0
   - libgfortran5=11.2.0
+  - libglib=2.70.2
   - libgomp=11.2.0
+  - libiconv=1.16
   - liblapack=3.9.0
+  - libllvm13=13.0.1
   - libnghttp2=1.46.0
   - libnsl=2.0.0
+  - libogg=1.3.4
   - libopenblas=0.3.18
+  - libopus=1.3.1
   - libpng=1.6.37
+  - libpq=14.2
   - libprotobuf=3.19.4
+  - libsodium=1.0.18
   - libssh2=1.10.0
   - libstdcxx-ng=11.2.0
+  - libtiff=4.3.0
   - libuuid=2.32.1
+  - libvorbis=1.3.7
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libxcb=1.13
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.12
   - libzlib=1.2.11
+  - lz4-c=1.9.3
   - markdown=3.3.6
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
+  - matplotlib-inline=0.1.3
   - multidict=6.0.2
+  - munkres=1.1.4
+  - mypy_extensions=0.4.3
+  - mysql-common=8.0.28
+  - mysql-libs=8.0.28
   - nccl=2.11.4.1
   - ncurses=6.3
+  - nest-asyncio=1.5.4
+  - nspr=4.32
+  - nss=3.74
   - numpy=1.22.2
   - oauthlib=3.2.0
+  - openjpeg=2.4.0
   - openssl=1.1.1l
   - opt_einsum=3.3.0
+  - packaging=21.3
+  - pandas=1.4.1
+  - parso=0.8.3
+  - pathspec=0.9.0
+  - pcre=8.45
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.0.1
   - pip=22.0.3
+  - platformdirs=2.5.1
+  - prompt-toolkit=3.0.27
   - protobuf=3.19.4
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.7
   - pycparser=2.21
+  - pygments=2.11.2
   - pyjwt=2.3.0
   - pyopenssl=22.0.0
+  - pyparsing=3.0.7
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
   - pysocks=1.7.1
   - python=3.10.2
+  - python-dateutil=2.8.2
   - python-flatbuffers=2.0
   - python_abi=3.10
+  - pytz=2021.3
   - pyu2f=0.1.5
+  - pyzmq=22.3.0
+  - qt=5.12.9
   - re2=2021.11.01
   - readline=8.1
   - requests=2.27.1
@@ -95,6 +188,7 @@ dependencies:
   - six=1.16.0
   - snappy=1.1.8
   - sqlite=3.37.0
+  - stack_data=0.2.0
   - tensorboard=2.6.0
   - tensorboard-data-server=0.6.0
   - tensorboard-plugin-wit=1.8.1
@@ -103,15 +197,25 @@ dependencies:
   - tensorflow-estimator=2.7.0
   - termcolor=1.1.0
   - tk=8.6.12
+  - tomli=2.0.1
+  - tornado=6.1
+  - traitlets=5.1.1
+  - typed-ast=1.5.2
   - typing-extensions=4.1.1
   - typing_extensions=4.1.1
   - tzdata=2021e
+  - unicodedata2=14.0.0
   - urllib3=1.26.8
+  - wcwidth=0.2.5
   - werkzeug=2.0.3
   - wheel=0.37.1
   - wrapt=1.13.3
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - yarl=1.7.2
+  - zeromq=4.3.4
   - zipp=3.7.0
   - zlib=1.2.11
+  - zstd=1.5.2
 prefix: /home/ralves/miniconda3/envs/keras
